add login signup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>danbro</title>
+    <title>Mr. Brown Bakery and Food Products Pvt Ltd</title>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lfr-iAsAAAAAIQsR8mfUxZO1qK3r_AXrTSLSb4g"></script>
   </head>
   <body>
     <div id="root"></div>
