--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mr. Brown Bakery and Food Products Pvt Ltd</title>
-    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Storm&family=Sansita+Swashed:wght@300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300..700&family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdUESwsAAAAACuiPPH1-KFwv_dY7WLdo-xgXHIu"></script>
+    <script async src="https://www.google.com/recaptcha/enterprise.js?render=6LdUESwsAAAAACuiPPH1-KFwv_dY7WLdo-xgXHIu"></script>
   </body>
 </html>
