--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Mr. Brown Bakery and Food Products Pvt Ltd</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Sansita+Swashed:wght@300..700&family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
   </head>
   <body>
     <div id="root-loader" class="loaders">
@@ -62,6 +63,5 @@
       }
     </style>
     <script type="module" src="/src/main.jsx"></script>
-    <script async src="https://www.google.com/recaptcha/enterprise.js?render=6LdUESwsAAAAACuiPPH1-KFwv_dY7WLdo-xgXHIu"></script>
   </body>
 </html>
